# YueLiPicasso.github.io

./: .gitignore  index.htm  index.html
FloridaDUIFine/code/: Florida_DUI_2022.catala_en  Makefile  README.md  florida.js  index.html  test.catala_en  webUI.js
FloridaDUIFine/code/ocaml/: Florida.ml  Florida_api_web.ml  dune  dune-project
blog/: comp_monad.html  comp_monad.html~  logic_op_on_ASCII_01.html
blog/FAC/: factbl520.html
blog/MUL/: MUL.aux  MUL.tex  Makefile
blog/MUL/html/: MUL.css  MUL.html  WARNINGS  images.pl  images.tex  internals.pl  labels.pl
blog/SUB/: SUB.html
jbr/: Yue Li at JetBrains Research.html
jbr/Yue Li at JetBrains Research_files/: app-135e8052c3b24174f2db.js  commons-f906ef8e494c1df1f593.js  component---src-templates-researcher-jsx-cfa5d004cea930b384f6.js  d4b3ec1de68e0f284a65e1e67e29025fb50a9658-605c9e3d8d0e7f261e7a.js  dc6a8720040df98778fe970bf6c000a41750d3ae-5bf6eb9d95bd5299e55f.js  f315f7cb08fda94dbcea2b97c836456f68503f7e-c7f915c6a4ff52a110a8.js  fonts.css  framework-944c341cefd204b67dd8.js  gtm.js  polyfill-eb7c72ce42ba7a7db27c.js  webpack-runtime-93239d04c142ca1153b4.js
scripts/: main.js
styles/: #style.css#  .#style.css  print.css  style.css
webscoresheet/: scoresheet_2022.html  scoresheet_2022.json
webscoresheet/scripts/: form_builder.js
webscoresheet/styles/: print.css
